# blackjack-project

./: .gitignore  BUILD-GUIDE.md  README.md  config.example.json  pyproject.toml
.claude/: settings.json
.claude/skills/blackjack-counter-sop/: SKILL.md
data/: REPORT.md
data/assets/: README.md
docs/: ARCHITECTURE.md  PRD.md
docs/research/: stack-notes.md  strategy-tables.md  trainer-notes.md
models/: README.md  metrics.json
notebooks/: train_yolo.ipynb
scripts/: audit_labels.py  capture_session.py  dataset_report.py  eval_detector.py  export_dataset.py  make_synthetic.py
src/bjcounter/: __init__.py  types.py
src/bjcounter/app/: config.py  hotkeys.py  main.py  overlay.py  worker.py
src/bjcounter/counting/: hilo.py  shoe.py  true_count.py
src/bjcounter/strategy/: deviations.py  engine.py  hands.py  tables.py
src/bjcounter/tracker/: reconcile.py  rounds.py  state.py
src/bjcounter/vision/: autolabel.py  capture.py  dataset.py  detector.py  matching.py  synthesize.py
tests/app/: test_config.py  test_main_config.py  test_overlay_format.py  test_worker.py  test_worker_errors.py  test_worker_thread.py
tests/counting/: conftest.py  test_hilo.py  test_shoe.py  test_true_count.py
tests/strategy/: conftest.py  test_chart_parity.py  test_deviations.py  test_engine.py  test_hands.py
tests/tracker/: conftest.py  test_reconcile.py  test_replay.py  test_rounds.py  test_state.py
tests/vision/: test_capture.py  test_dataset.py  test_detector.py  test_matching.py  test_synthesize.py
