[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bjcounter"
version = "0.1.0"
description = "Real-time computer-vision card-counting advisor for free-play blackjack trainers (portfolio project)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Advay Iyer" }]

# Runtime dependencies (local CPU inference only — zero network egress at runtime).
# Pins are the Phase 0 baseline; Phase 1 R2 (stack-notes research) confirms/updates them.
dependencies = [
    "mss==10.0.0",
    "pynput==1.7.7",
    "numpy==2.1.3",
    "opencv-python==4.10.0.84",
    "onnxruntime==1.20.1",
    "gymnasium==1.0.0",
]

[project.optional-dependencies]
# Training deps live on Colab (free T4); listed here only for provenance/pinning.
train = [
    "ultralytics==8.3.49",
    "torch==2.5.1",
]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/bjcounter"]

[tool.coverage.report]
fail_under = 80
