[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bjcounter"
version = "0.1.0"
description = "Real-time computer-vision card-counting advisor for free-play blackjack trainers (portfolio project)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Advay Iyer" }]

# Runtime dependencies (local CPU inference only — zero network egress at runtime).
# Pins verified against PyPI 2026-07-02 per docs/research/stack-notes.md.
dependencies = [
    "mss==10.2.0",
    "pynput==1.8.2",
    "numpy==2.1.3",
    "opencv-python==4.10.0.84",
    "onnxruntime==1.27.0",
    "gymnasium==1.0.0",
]

[project.optional-dependencies]
# Training deps run on Colab (free T4). torch is deliberately a floor, not a hard pin:
# Colab preinstalls a torch build matched to its CUDA runtime, and forcing a different one
# is a known breakage source. The exact torch/ultralytics versions used for the final
# training run get recorded in models/README.md at M4 for provenance.
train = [
    "ultralytics==8.4.86",
    "torch>=2.5",
]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/bjcounter"]

[tool.coverage.report]
fail_under = 80
